added the video to blog

--- a/data/blog/top-4-tips-for-product-managers.mdx
+++ b/data/blog/top-4-tips-for-product-managers.mdx
@@ -70,3 +70,7 @@ Here's a screenshot of what my home page looks like on codecademy. As you can se
 
 If this was helpful, make sure you check out my [YouTube Channel](https://www.youtube.com/channel/UCcuaQecz84wTuxKzr1Yxi4Q)
 
+I also have a video covering this same topic here:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/aqgGyrajnUw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
