--- a/data/blog/product-manager-program.mdx
+++ b/data/blog/product-manager-program.mdx
@@ -10,6 +10,11 @@ summary: After many requests, it's time I make a course.... or program. Whatever
 
 Yeah thats what I think when I see someone launching a course. It makes me cringe- but I had a lot of people ask for it, and I have some free time over the next few weeks so why not give poeple what they want!
 
+<div className="my-1 px-2 w-full overflow-hidden xl:my-1 xl:px-2 xl:w-1/2">
+    <Image alt="bruh-meme-product" src="/static/images/bruh-meme.jpg" width={243} height={247} />
+</div>
+
+
 It's not set in stone (the curriculum) however I think the following topics make sense. 
 
 - Current Topics:
