modified some stuff

--- a/data/blog/product-manager-program.mdx
+++ b/data/blog/product-manager-program.mdx
@@ -14,10 +14,12 @@ Yeah thats what I think when I see someone launching a course. It makes me cring
     <Image alt="bruh-meme-product" src="/static/images/bruh-meme.jpg" width={243} height={247} />
 </div>
 
+There were a TON of comments on an old video I made about How I became a product manager without any formal education or experience. I'm going to have some fun putting this info together once I get back from Italy and get into the studio :).
+
 
 It's not set in stone (the curriculum) however I think the following topics make sense. 
 
-- Current Topics:
+Current Topics:
 - Pm Mindset
 - Types of PM
 - How do Products get Built
