added new blog post

--- a/data/blog/how-to-use-roam-templates.mdx
+++ b/data/blog/how-to-use-roam-templates.mdx
@@ -8,38 +8,46 @@ summary: I walk you through how to use the template feature in Roam Research.
 
 Today is a quick explainer on how to use [Roam Research’s](https://roamresearch.com) new feature called templates.
 
-Its really good if you have a dialy promopt or for metadata.
+Its really good if you have a dialy prompt or for metadata.
 
 You used to have to create your own page and reference it.
 
-They just released it on December 30th. 
+They just released it on December 30th.
 
 Jump into roam and open roam/templates as it’s own page. This is very similar to the roam/css page when in use for themes.
 
 Here is the email from the founder:
 
 <div className="my-1 px-2 w-full overflow-hidden xl:my-1 xl:px-2 xl:w-1/2">
-    <Image alt="Roadmap" src="/static/images/roam-email.png" width={674} height={200} />
+  <Image alt="Roadmap" src="/static/images/roam-email.png" width={674} height={200} />
 </div>
 
-As you can see that you’re just referencing whatever you put into the roam templating page. This is super similar to using a text expander. 
+As you can see that you’re just referencing whatever you put into the roam templating page. This is super similar to using a text expander.
 
 All you need to do is go to `roam/templates`, and type in whatever it is that you want to use as a prompt.
 
 <div className="my-1 px-2 w-full overflow-hidden xl:my-1 xl:px-2 xl:w-1/2">
-    <Image alt="Roadmap" src="/static/images/roam-template.png" width={575} height={458} />
+  <Image alt="Roadmap" src="/static/images/roam-template.png" width={575} height={458} />
 </div>
 
-Next all you need to do is press `;;` to bring up all the triggers for templates. As you can see it auto suggests the templates that you have. 
+Next all you need to do is press `;;` to bring up all the triggers for templates. As you can see it auto suggests the templates that you have.
 
-That’s it. 
+That’s it.
 
 To recap
+
 - Go to roam/templates
 - Create a block for whatever you want to use as a template
 - Reference the template on any page using `;;`
 
-
 It’s amazing to see how quickly Roam Research iterates. Thats got to be a great way they built community.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Y8-lV0fqGPQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/Y8-lV0fqGPQ"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
