finished 10 podcasts blog article

--- a/data/blog/best-podcasts-entrepreneurs-investors-vc-self-development.mdx
+++ b/data/blog/best-podcasts-entrepreneurs-investors-vc-self-development.mdx
@@ -16,6 +16,8 @@ So let's jump right into it. If you want to start a business, you need to have a
 
 They pump out amazing content all the time. [My favorite recent episode](https://www.youtube.com/watch?v=ydHLajgdT4c&t=0s) was by a senior product manager at Amazon, where she describes how Amazon thinks about actually writing their requirement documents. So whenever you're coming up with a new product whether it's a piece of hardware or software, there's got to be a decent amount of documentation done before you actually go write the code or build the thing. So that's called a PRD or a product requirement document. This episode covers how they write those documents at Amazon. And if you want to learn more about product management in general, I have a [whole playlist](https://youtu.be/Bs9P9x661_I) that's customized just for product management.
 
+[Heres my favorite episode.](https://www.youtube.com/watch?v=ydHLajgdT4c&t)
+
 ## 2. This Week in startups
 
 The next show is called This Week In Startups or TWiST. The host is [Jason Calacanis](https://calacanis.com). You may know him as the angel investor. He's kind of the GOAT in this space. I think his returns as a single investor are higher than that of anybody else ever. He kind of wrote the book or he did write the book on angel investing. You can check that out.. [It's called Angel: How to Invest in Technology Startups — Timeless Advice from an Angel Investor Who Turned $100,000 Into $100,000,000](https://amzn.to/3seJ63f).
@@ -70,4 +72,42 @@ The next is called a [Founders Field Guide.](https://joincolossus.com/) And I ca
 
 And it's kind of crazy because those banks are always changing, what's going on and they're pretty antiquated. So Plaid's job is basically to make that secure connection. And in this podcast, Zach talks about how you can sell your product directly to developer, which I found a super, super interesting. And the way that they thought of it, it's kind of like what [David Sacks](https://www.linkedin.com/in/davidoliversacks) talks about, which is bottom up or [bottoms up SaaS playbook](https://sacks.substack.com/). Meaning that he would give his tool Plaid to a developer. That developer will go and build what they need to get done with Plaid, and then show it to a product manager or somebody in their org. That person would say, "Whoa, how'd you do that?" And they say, "Oh, I did it with Plaid." Which is a really good way to market your startup.
 
-## 7.
+[My favorite episode](https://podcasts.apple.com/us/podcast/zach-perret-future-financial-services-founders-field/id1154105909?i=1000503404857)
+
+## 7. Tim Ferris show
+
+The next is the [Tim Ferriss](https://tim.blog/podcast/) Show. Now you probably have heard of this a million times. Tim is kind of he's the guy when it comes to podcasts. If you hear [Joe Rogan](https://www.joerogan.com/), you hear Tim Ferriss. If you don't know about him, he's the author of many bestselling books. One of which is the [4-Hour Workweek](https://amzn.to/3xGUGWi), super popular in the tech space. It was known for it kind of coined the term digital nomad. And he is kind of the GOAT of podcasting.
+
+He has amazing guests on that a lot of other people probably cannot land and he's really good at learning how to learn. All that aside, he's a great interviewer. And if you haven't checked it out, you definitely should. My favorite episode was with [Bob Iger.](https://en.wikipedia.org/wiki/Bob_Iger) He is the chairman at [Disney](https://en.wikipedia.org/wiki/The_Walt_Disney_Company). I mean, that company has just been around forever. Their IP is through the roof. Their transfer from being all about amusement parks to having this Disney+ platform, which is going to outpace Netflix. That is crazy. The way that they handled the pandemic is crazy.
+
+Bob basically 7Xed the stock in his tenure as CEO. He recently stepped down as still the chair. I believe he stepped down. [In the podcast](https://www.youtube.com/watch?v=IT9ak-akrdg&t=0s), he talks about working with [Steve Jobs on Pixar.](https://www.cnbc.com/2020/12/02/bob-iger-on-how-he-convinced-steve-jobs-to-sell-pixar-to-disney.html#:~:text=When%20Bob%20Iger%20became%20the,a%20risky%20idea%3A%20buy%20Pixar.&text=But%20Steve%20Jobs%2C%20the%20founder,agree%20on%20a%20distribution%20deal.) He talks about negotiations. He talks about some self-development pieces around keeping your mindset right and the importance of exercise throughout your day. I loved that episode.
+
+[My favorite episode](https://www.youtube.com/watch?v=IT9ak-akrdg&t=0s)
+
+## 8. 20 Minute vc
+
+Twenty Minute VC. It sounds like the guy is Harry Potter. It's an amazing show. And it takes you inside the world of venture capital, startups and the pitch. It's supposed to just be 20 minutes. But I think that went out the window after it got some popularity. So Twenty Minute VC is also a great lesson in marketing because the name is just it's catchy. The show is hosted by a guy named [Harry Stebbings](https://twitter.com/HarryStebbings),who has a thick UK accident, hence the Harry Potter reference.
+
+[My favorite episode](https://podcasts.apple.com/us/podcast/20vc-slack-founder-stewart-butterfield-on-leadership/id958230465?i=1000498778050) is with the founder of Slack, Stewart Butterfield. Stewart sent a letter to microsoft on the November 2, 2016 edition of the New York times after they launched a competitor called Teams.. [Worth checking out here.](https://slack.com/blog/news/dear-microsoft) A very aggressive move for a founder to make.
+
+His way of explaining product decisions was really relatable. He says that, "Product development is a little bit like cooking. So if you enjoy cooking and you're kind of enthusiastic about it, you start making something and you constantly make adjustments. You're constantly adjusting the temperature, the thickness, the spice, the amount of salt. The kind of sequence of things and then the next time you make it, you incorporate all of the improvements that you made last time."
+
+[My favorite episode](https://podcasts.apple.com/us/podcast/20vc-slack-founder-stewart-butterfield-on-leadership/id958230465?i=1000498778050)
+
+## 9. Acquired FM
+
+The next recommendation is called it [AcquiredFM](https://acquired.fm). This is good for a long car ride because the format of the show is much longer. I think the episodes can be like an hour to three hours and even certain episodes like what they did with Berkshire Hathaway, there were three parts and each part was like two hours long. They help you learn the playbooks that the greatest have done. So they do these really deep dive on different companies. It's aimed to help founders, investors and operators.
+
+My favorite episode is the one about [DoorDash](https://doordash.com). So in my previous life before I relocated to Texas, I was running the product teams for a company called [Delivery Dudes](https://deliverydudes.com). It was a restaurant delivery service. _We got smoked by DoorDash._ So I'm super biased. I just want to know what they did. And I want to know what was their playbook such that I can use something similar or maybe there's an insight there that I can apply to my next venture.
+
+[My favorite episode](https://podcasts.apple.com/us/podcast/doordash/id1050462261?i=1000501918997)
+
+## 9. Decoder
+
+The last podcast that you should be listening to is called Decoder. Now this is much newer in my realm. I've only listened to one episode, but it was super interesting so I wanted to throw it in here. It's put out by [the Verge](https://theverge.com), which is a really popular tech publication. And the host is a good job of like pressing the guests. So the CPO or chief product officer of YouTube went on their show and he got questioned a lot about the algorithm. The algorithm is kind of this black box of a product when it comes to the creators on this platform.
+
+[My favorite episode](https://podcasts.apple.com/us/podcast/youtubes-chief-product-officer-neal-mohan-on-algorithm/id1011668648?i=1000530885068)
+
+## Whats next
+
+Love you. sign up for my newsletter below.
