new updates for typos

--- a/data/blog/best-podcasts-entrepreneurs-investors-vc-self-development.mdx
+++ b/data/blog/best-podcasts-entrepreneurs-investors-vc-self-development.mdx
@@ -30,9 +30,10 @@ Jason has him on the show and it was kind of controversial because they were lik
 
 The other episode you should check out is when Jason and the podcast hows from [Acquired FM](https://acquired.fm) [talk about how to start a new venture fund](https://youtu.be/8oiBpaIKa44). That's with the folks over at AcquiredFM, which is a show that I'll recommend in a little bit later in the episode. It's all about fund formation, follow-on strategies, how these special purpose vehicles work. So if you're interested in angel investing and how folks think about setting up new funds, definitely, definitely check out that.
 
-_Heres my favorite episodes_
-[Nikola fraud](https://www.youtube.com/watch?v=ReMOG_XwVBo&t=0s)
-[How to start a new venture fund](https://youtu.be/8oiBpaIKa44)
+**Heres my favorite episodes**
+
+- [Nikola fraud](https://www.youtube.com/watch?v=ReMOG_XwVBo&t=0s)
+- [How to start a new venture fund](https://youtu.be/8oiBpaIKa44)
 
 ## 3. My First Million
 
@@ -44,7 +45,7 @@ The hosts come to each episode with a fair amount of research of different, inte
 
 Sam does a really good job of getting people past their normal comfort zone within PR. He kind of breaks them and gets them to say things that are more brash. That's my favorite recent episode. She talks about her calendar as well, which is literally just blocked from 8:00 to midnight. Like every minute of her day is kind of accounted for. It sounds crazy, but it's funny. I actually stole some of that practice and use it today.
 
-[Heres my favorite episode.](https://www.youtube.com/watch?v=ReMOG_XwVBo&t=0s)
+[My favorite episode.](https://www.youtube.com/watch?v=ReMOG_XwVBo&t=0s)
 
 ## 4. Starting Greatness with Mike Maples Jr
 
@@ -52,9 +53,9 @@ These are in no particular order of priority. Mike Maples Jr. is a co-founding p
 
 The podcast basically goes into stories from the super performers before they blew up, before their stuff got big and super successful. Some examples of people that he's had on the show is the founder of Netscape, [Marc Andreessen](https://en.wikipedia.org/wiki/Marc_Andreessen). He also runs [a16z](https://a16z.com). The LinkedIn founder, [Reid Hoffman](https://en.wikipedia.org/wiki/Reid_Hoffman), and the founders of Instagram [Kevin Systrom](https://en.wikipedia.org/wiki/Kevin_Systrom) and [Mike Krieger](https://en.wikipedia.org/wiki/Mike_Krieger). It's been particularly helpful for me, a new startup founder learning how to price a product. I've been having trouble with pricing... and I found his podcast because of that. All the advice is very actionable. It's tactical. It's not just theoretical.
 
-[Heres my favorite episode.](https://greatness.floodgate.com/episodes/lessons-of-greatness-price-before-you-build)
+[My favorite episode.](https://greatness.floodgate.com/episodes/lessons-of-greatness-price-before-you-build)
 
-The next two shows are actually under the same media company. I believe. It's called Join Colossus, but we'll just run through both of them.
+_The next two shows are actually under the same media company. I believe. It's called [Join Colossus](https://joincolossus.com), but we'll just run through both of them._
 
 ## 5. Invest like the Best
 
@@ -64,7 +65,7 @@ For somebody that works in software and builds software for a living. It's amazi
 
 He basically goes in and talks about the different generations of SaaS, had it started as SaaS, 1.0 where GUI's needed to exist, and you literally get the thing mailed to you. And then he goes into what he calls gen two SaaS, gen three, SaaS, which is now APIs as a service. So machines talking to machines. Check out that episode.
 
-[My favorite episode on that show is the Past, the Present and the Future of SaaS and software.](https://podcasts.apple.com/us/podcast/eric-vishria-past-present-future-saas-software/id1154105909?i=1000485597670)
+[My favorite episode.](https://podcasts.apple.com/us/podcast/eric-vishria-past-present-future-saas-software/id1154105909?i=1000485597670)
 
 ## 6. Founders Field Guide
 
@@ -72,7 +73,7 @@ The next is called a [Founders Field Guide.](https://joincolossus.com/) And I ca
 
 And it's kind of crazy because those banks are always changing, what's going on and they're pretty antiquated. So Plaid's job is basically to make that secure connection. And in this podcast, Zach talks about how you can sell your product directly to developer, which I found a super, super interesting. And the way that they thought of it, it's kind of like what [David Sacks](https://www.linkedin.com/in/davidoliversacks) talks about, which is bottom up or [bottoms up SaaS playbook](https://sacks.substack.com/). Meaning that he would give his tool Plaid to a developer. That developer will go and build what they need to get done with Plaid, and then show it to a product manager or somebody in their org. That person would say, "Whoa, how'd you do that?" And they say, "Oh, I did it with Plaid." Which is a really good way to market your startup.
 
-[My favorite episode](https://podcasts.apple.com/us/podcast/zach-perret-future-financial-services-founders-field/id1154105909?i=1000503404857)
+[My favorite episode.](https://podcasts.apple.com/us/podcast/zach-perret-future-financial-services-founders-field/id1154105909?i=1000503404857)
 
 ## 7. Tim Ferris show
 
@@ -82,7 +83,7 @@ He has amazing guests on that a lot of other people probably cannot land and he'
 
 Bob basically 7Xed the stock in his tenure as CEO. He recently stepped down as still the chair. I believe he stepped down. [In the podcast](https://www.youtube.com/watch?v=IT9ak-akrdg&t=0s), he talks about working with [Steve Jobs on Pixar.](https://www.cnbc.com/2020/12/02/bob-iger-on-how-he-convinced-steve-jobs-to-sell-pixar-to-disney.html#:~:text=When%20Bob%20Iger%20became%20the,a%20risky%20idea%3A%20buy%20Pixar.&text=But%20Steve%20Jobs%2C%20the%20founder,agree%20on%20a%20distribution%20deal.) He talks about negotiations. He talks about some self-development pieces around keeping your mindset right and the importance of exercise throughout your day. I loved that episode.
 
-[My favorite episode](https://www.youtube.com/watch?v=IT9ak-akrdg&t=0s)
+[My favorite episode.](https://www.youtube.com/watch?v=IT9ak-akrdg&t=0s)
 
 ## 8. 20 Minute vc
 
@@ -92,7 +93,7 @@ Twenty Minute VC. It sounds like the guy is Harry Potter. It's an amazing show. 
 
 His way of explaining product decisions was really relatable. He says that, "Product development is a little bit like cooking. So if you enjoy cooking and you're kind of enthusiastic about it, you start making something and you constantly make adjustments. You're constantly adjusting the temperature, the thickness, the spice, the amount of salt. The kind of sequence of things and then the next time you make it, you incorporate all of the improvements that you made last time."
 
-[My favorite episode](https://podcasts.apple.com/us/podcast/20vc-slack-founder-stewart-butterfield-on-leadership/id958230465?i=1000498778050)
+[My favorite episode.](https://podcasts.apple.com/us/podcast/20vc-slack-founder-stewart-butterfield-on-leadership/id958230465?i=1000498778050)
 
 ## 9. Acquired FM
 
@@ -100,14 +101,15 @@ The next recommendation is called it [AcquiredFM](https://acquired.fm). This is 
 
 My favorite episode is the one about [DoorDash](https://doordash.com). So in my previous life before I relocated to Texas, I was running the product teams for a company called [Delivery Dudes](https://deliverydudes.com). It was a restaurant delivery service. _We got smoked by DoorDash._ So I'm super biased. I just want to know what they did. And I want to know what was their playbook such that I can use something similar or maybe there's an insight there that I can apply to my next venture.
 
-[My favorite episode](https://podcasts.apple.com/us/podcast/doordash/id1050462261?i=1000501918997)
+[My favorite episode.](https://podcasts.apple.com/us/podcast/doordash/id1050462261?i=1000501918997)
 
 ## 10. Decoder
 
 The last podcast that you should be listening to is called Decoder. Now this is much newer in my realm. I've only listened to one episode, but it was super interesting so I wanted to throw it in here. It's put out by [the Verge](https://theverge.com), which is a really popular tech publication. And the host is a good job of like pressing the guests. So the CPO or chief product officer of YouTube went on their show and he got questioned a lot about the algorithm. The algorithm is kind of this black box of a product when it comes to the creators on this platform.
 
-[My favorite episode](https://podcasts.apple.com/us/podcast/youtubes-chief-product-officer-neal-mohan-on-algorithm/id1011668648?i=1000530885068)
+[My favorite episode.](https://podcasts.apple.com/us/podcast/youtubes-chief-product-officer-neal-mohan-on-algorithm/id1011668648?i=1000530885068)
 
-## Whats next
+## Whats Next
 
-Love you. sign up for my newsletter below.
+- Check out my [YouTube](https://www.youtube.com/channel/UCcuaQecz84wTuxKzr1Yxi4Q) to learn about product management.
+- Be a part of 2pm Tech Tuesdays by signing up below
